[tool.poetry]
name = "recurly_data"
version = "0.1.0"
description = "Recurly customer data extractor."
authors = ["Faiyaz Haider <faiyaz7283@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
recurly = "^3.3"
requests = "^2.22"
python-dotenv = "^0.10.3"
sentry-sdk = "^0.13.5"
tqdm = "^4.40"
colorama = "^0.4.3"
psutil = "^5.6.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
